Add FlespiTest button in DeviceType create

--- a/source/console/src/util/lang/en.json
+++ b/source/console/src/util/lang/en.json
@@ -146,6 +146,7 @@
     "footer.solution.page": "solution's home page",
     "footer.solution.ig": "solution's implementation guide",
     "vehicle.demo": "Automotive Demo",
+    "flespi.test": "Flespi Test",
     "json.error": "JSON Error",
     "json.invalid": "is not a JSON file",
     "simulation.type": "Simulation type",
